--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+     font-family:monospace;
      font-size: 1.2em;
      background-color: #000000;
      padding: 0;
@@ -11,9 +11,9 @@ body{
      top:0px;
      left:0px;
      bottom:0px;
-     width:50%;
+     width:70%;
      overflow:auto;
-     word-break: break-all;
+     word-break: break-word;
      background-color: #000000;
      color:#00b000;
      border:none;
@@ -23,10 +23,10 @@ body{
      top:0px;
      right:0px;
      bottom:0px;
-     width:50%;
+     width:30%;
      overflow:auto;
      word-break: break-all;
-     background-color: #444444;
+     background-color: #222222;
      color:#00b000;
      border:none;
 }
@@ -37,4 +37,13 @@ body{
      cursor:pointer;
      padding:15px;
      text-align: left;
+}
+#newMessage{
+     padding:0;
+     width:100%;
+     outline:none;
+     border:none;
+     margin:0;
+     background-color: #333333;
+     color:#eeeeee;
 }
