--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body{
     font-family: monospace;
     font-size:1.0em;
     background-color: #111111;
+    color:#eeeeee;
     text-align: center;
 }
 #chatWindow{
@@ -66,4 +67,40 @@ body{
     color:#000000;
     text-align: left;
     margin:5px;
+}
+
+/**/
+#newStreamer{
+    width:50%;
+    padding:20px;
+    outline:none;
+    border:none;
+    font-size:22px;
+    border-radius:8px;
+    background-color: #ffffff;
+    color:#000000;
+}
+#newAuth{
+    width:50%;
+    padding:20px;
+    outline:none;
+    border:none;
+    font-size:22px;
+    border-radius:8px;
+    background-color: #ffffff;
+    color:#000000;
+}
+#connect:hover{
+    background-color: #6cb110;
+}
+#connect{
+    padding:20px;
+    outline:none;
+    border:none;
+    font-size:22px;
+    border-radius:8px;
+    background-color: #8af202;
+    color:#000000;
+    font-weight: bold;
+    cursor: pointer;
 }
