--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
      padding:15px;
      background-color: rgb(41, 40, 43);
      color:rgb(151, 15, 163);
-     font-size: 64px;
+     font-size: 1.3em;
      font-weight: 900;
      border:none;
 }
