--- a/style.css
+++ b/style.css
@@ -16,16 +16,16 @@ body{
      grid-template-areas:
      "left top top"
      "left middle-top right";
-     grid-template-columns: 1fr 2fr 1fr;
+     grid-template-columns: 1fr 2fr 2fr;
      grid-template-rows: auto;
      height: 100vh;
      border:none;
-     gap: 5px;
+     gap: 3px;
 }
 
 #top {
      grid-area: top;
-     text-align: left;
+     text-align: center;
      padding:15px;
      background-color: rgb(41, 40, 43);
      color:#EEE;
@@ -69,6 +69,7 @@ body{
      background-color: #333;
      border:1px solid #222;
      color:#fff;
+     border-radius: 5px;
 }
 
 #chat{
@@ -78,8 +79,6 @@ body{
      margin:0 auto;
      overflow: hidden;
      word-break: break-all;
-     background-color: #333;
-     border:1px solid #222;
      height: 50vh;
 }
 
