--- a/style.css
+++ b/style.css
@@ -69,3 +69,19 @@ body{
      color:orange;
      background-color: #444;
 }
+
+#close{
+     position: absolute;
+     top:5px;
+     right:5px;
+     outline:none;
+     border:none;
+     padding:3px;
+     margin:0;
+     background-color: #444;
+     color:orange;
+     cursor: pointer;
+}
+#close:hover{
+     color:#FF0000;
+}
