--- a/design.css
+++ b/design.css
@@ -22,7 +22,7 @@ body{
 	height:auto;
 	font-size:1.0em;
 	border:1px solid #cccccc;
-	border-radius:15px;
+	border-right:3px solid #1368bd;
 	text-align: center;
 	cursor:pointer;
 	background-color:#eeeeee;
