--- a/design.css
+++ b/design.css
@@ -21,11 +21,11 @@ body{
 	min-width:100px;
 	height:auto;
 	font-size:1.0em;
-	border:1px solid #cccccc;
+	border:1px solid #000000;
 	border-right:3px solid #1368bd;
 	text-align: center;
 	cursor:pointer;
-	background-color:#eeeeee;
+	background-color:#ffffff;
 	margin:15px;
 	padding:15px;
 }
