--- a/design.css
+++ b/design.css
@@ -18,7 +18,6 @@ body{
 
 .mainDiv{
 	word-break: break-all;
-	flex:1;
 	height:auto;
 	font-size:1.0em;
 	border:none;
@@ -26,8 +25,8 @@ body{
 	text-align: center;
 	cursor:pointer;
 	background-color:#ffffff;
-	margin:15px;
-	padding:15px;
+	margin:5px;
+	padding:5px;
 }
 .mainDiv:hover{
 	color:#ff0000;
@@ -39,10 +38,7 @@ body{
 }
 
 #result{
-	display:flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	width:100%;
+	/* */
 }
 
 .button{
