--- a/design.css
+++ b/design.css
@@ -20,8 +20,8 @@ body{
 	word-break: break-all;
 	height:auto;
 	font-size:1.0em;
-	border:none;
-	border-right:3px solid #1368bd;
+	border:3px solid #111111;
+	border-radius:10px;
 	text-align: center;
 	cursor:pointer;
 	background-color:#ffffff;
