--- a/design.css
+++ b/design.css
@@ -22,11 +22,11 @@ body{
 	font-size:1.0em;
 	border:3px solid #111111;
 	border-radius:10px;
-	text-align: center;
+	text-align: left;
 	cursor:pointer;
 	background-color:#ffffff;
-	margin:5px;
-	padding:5px;
+	margin:15px;
+	padding:2px;
 }
 .mainDiv:hover{
 	color:#ff0000;
