--- a/design.css
+++ b/design.css
@@ -14,11 +14,14 @@ body{
 .textareaDiv{
 	padding:15px;
 	width:75%;
+	display:inline-block;
 }
 
 .deleteDiv{
 	padding:15px;
 	width:25%;
+	display:inline-block;
+	background-color:#999999;
 }
 
 .mainDiv{
