--- a/design.css
+++ b/design.css
@@ -19,10 +19,11 @@ body{
 
 .deleteDiv{
 	padding:0;
-	width:25%;
 	display:inline-block;
 	text-align:center;
 	color:#ff0000;
+	cursor:pointer;
+	vertical-align: middle;
 }
 
 .mainDiv{
@@ -32,7 +33,6 @@ body{
 	border:none;
 	border-radius:10px;
 	text-align: left;
-	cursor:pointer;
 	background-color:#ffffff;
 	margin:15px;
 	padding:15px;
