--- a/design.css
+++ b/design.css
@@ -14,15 +14,17 @@ body{
 .textareaDiv{
 	padding:0;
 	width:75%;
+	display:inline-block;
 }
 
 .deleteDiv{
 	width:25%;
 	padding:0;
 	text-align:center;
-	color:#ff0000;
+	color:#ffffff;
 	cursor:pointer;
 	background-color:#ff0000;
+	display:inline-block;
 }
 
 .mainDiv{
