--- a/design.css
+++ b/design.css
@@ -8,33 +8,37 @@ body{
 	text-align: center;
 	background-color: #cccccc;
 	font-size:1.0em;
-	font-family:Verdana, Geneva, Tahoma, sans-serif;
+	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .textareaDiv{
+	flex:1 90%;
 	padding:0;
-	width:75%;
-	display:inline-block;
+	text-align:left;
+	color:#000000;
+	border:1px solid #ff0000;
+	border:none;
 }
 
 .deleteDiv{
-	width:64px;
-	height:64px;
+	flex:1 10%;
 	padding:0;
 	text-align:center;
-	color:#ffffff;
+	color:#ff0000;
+	border:none;
 	cursor:pointer;
-	background-color:#ff0000;
-	display:inline-block;
+	font-size:32px;
 }
 
 .mainDiv{
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	word-break: break-all;
 	height:auto;
 	font-size:1.0em;
 	border:none;
 	border-radius:10px;
-	text-align: left;
 	background-color:#ffffff;
 	margin:15px;
 	padding:15px;
@@ -45,10 +49,6 @@ body{
 	margin:5px;
 }
 
-#result{
-	/* */
-}
-
 .button{
 	padding:15px;
 	margin:15px;
@@ -57,7 +57,8 @@ body{
 	outline:none;
 	background-color:green;
 	color:#eeeeee;
-	font-size:2em;
+	font-size:1.3em;
+	font-weight: bold;
 	width:50%;
 	border-radius:15px;
 }
