--- a/design.css
+++ b/design.css
@@ -24,10 +24,11 @@ body{
 	flex:1 10%;
 	padding:0;
 	text-align:center;
-	color:#ff0000;
+	color:#ffffff;
 	border:none;
 	cursor:pointer;
 	font-size:32px;
+	background-color:orange;
 }
 
 .mainDiv{
