--- a/design.css
+++ b/design.css
@@ -29,7 +29,6 @@ body{
 	cursor:pointer;
 	font-size:32px;
 	background-color:#ff0000;
-	border-radius:50%;
 }
 
 .mainDiv{
@@ -43,7 +42,7 @@ body{
 	border-radius:10px;
 	background-color:#ffffff;
 	margin:15px;
-	padding:15px;
+	padding:0;
 }
 
 #form{
