--- a/design.css
+++ b/design.css
@@ -13,7 +13,7 @@ body{
 
 .textareaDiv{
 	flex:1 90%;
-	padding:15px;
+	padding-left:5px;
 	text-align:left;
 	color:#000000;
 	border:1px solid #ff0000;
