--- a/design.css
+++ b/design.css
@@ -14,6 +14,7 @@ body{
 .textareaDiv{
 	flex:1 90%;
 	padding-left:5px;
+	padding-right:5px;
 	text-align:left;
 	color:#000000;
 	border:1px solid #ff0000;
@@ -39,7 +40,6 @@ body{
 	height:auto;
 	font-size:1.0em;
 	border:none;
-	border-radius:10px;
 	background-color:#ffffff;
 	margin:15px;
 	padding:0;
