--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body{
     margin:0;
     padding:0;
     user-select: none;
+    background-color: #ffffff;
 }
 
 #top {
@@ -76,20 +77,21 @@ body{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    word-break: normal;
-    margin:0;
+    word-break: break-word;
+    margin:0 auto;
+    text-align: center;
+    width:90%;
     padding:0;
 }
 
 #main > div{
     text-align: center;
-    flex:50%;
-    min-height:300px;
+    flex: 100%;
 }
 
 #bot{
-    background-color: #eeeeee;
-    color:#999999;
+    background-color: #ffffff;
+    color:#cccccc;
     text-align: center;
     padding:32px;
     border:none;
@@ -105,17 +107,19 @@ ul{
 
 section{
     border:none;
-    display: inline-block;
-    padding:0;
-    margin:0;
+    word-break:break-word;
+    margin:0 auto;
     text-align: center;
     color:#000000;
-    font-size: 1.2em;
-    min-height:100px;
+    font-size: 1em;
     text-align: center;
     align-content: center;
     align-items: center;
     align-self: center;
+    background-color: #ffffff;
+    padding:5px;
+    margin-top:15px;
+    margin-bottom: 15px;
 }
 
 #velkommen{
@@ -130,20 +134,10 @@ h3{
     color:#999999;
 }
 
+
 #taxi{
+    border:2px solid #000000;
     width: 100%;
-    height: 100vh;
-    background-color: #ffffff;
-    background-image:url('img/taxi.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    padding: 0;
-    margin:0;
-    text-align: center;
-    align-content: center;
-    align-items: center;
-    align-self: center;
 }
 
 #greencar{
@@ -172,36 +166,60 @@ h3{
 }
 
 button{
-    padding:15px;
+    padding-left:22px;
+    padding-right:22px;
+    padding-bottom:12px;
+    padding-top:12px;
     border-radius:15px;
     outline:none;
-    background-color: green;
-    color:#ffffff;
+    background-color: #33c617;
     border:none;
     margin:0 auto;
     font-size:1.2em;
-    color:#ffffff;
+    color:#eeeeee;
     font-family: fantasy;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
     cursor: pointer;
-    box-shadow: 5px 5px #000000;
+}
+
+input{
+    padding:15px;
+    outline: none;
+    border:none;
+    width:50%;
+    color:#cccccc;
+    border-bottom:1px solid #000000;
 }
 
 #form{
-    padding:15px;
-    background-color: #eeeeee;
-    color: #555555;
-    margin:15px;
+    color: #cccccc;
+    margin:0 auto;
     text-align: center;
-    border:1px solid #cccccc;
-    display: inline-block;
-    margin:32px;
-    border-radius: 15px;
 }
 
 #formDiv{
+    padding:15px;
     text-align: center;
     margin:0 auto;
+    width:50%;
+}
+
+#btn{
+    padding:22px;
+    background-color: #33c617;
+    color:#ffffff;
+    cursor: pointer;
+    font-family: fantasy;
+}
+
+.left{
+    text-align: left;
+}
+.center{
+    text-align: center;
+}
+.right{
+    text-align: right;
 }
 
 @media(max-width:800px) {
