--- a/styles.css
+++ b/styles.css
@@ -1,229 +1,138 @@
-/*
-    CSS by Fliro.org
-*/
-a{
-    color:#000000;
-    text-decoration: none;
-    padding:3px;
-}
-a:hover{
-    border-left:1px solid #555555;
-}
-
 body{
-    font-family:'Courier New', Courier, monospace;
-    font-size:1em;
-    margin:0;
-    padding:0;
     user-select: none;
-    background-color: #ffffff;
-}
-
-#top {
-    background-color: #ffffff;
-    width: 100%;
-    border:none;
-}
-
-#top > div{
-    text-align: center;
-    width:100%;
-}
-
-#logo_text_click{
-    cursor: pointer;
-}
-
-#logo_text{
-    align-content: center;
-    font-size:2em;
-    align-items: center;
-    margin:0;
-    color:#444444;
-}
-
-#logo_img{
-    align-items: center;
-    align-content: center;
-    width:100%;
-    max-width:560px;
-    max-height:160px;
-    outline:none;
-    border:none;
-    margin:0 auto;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding:0;
+    margin:0;
+    border:none;
+    background-color: #ffffff;
 }
 
-#green {
-    width: 100%;
-    height: 50vh;
-    background-color: #ffffff;
-    background-image:url('img/road.webp');
+a{
+    text-decoration: none;
+    padding:15px;
+    margin:0 auto;
+    color:#24c108;
+    background-color: #00000077;
+    font-weight: 900;
+    font-size: 1.3em;
+    outline:none;
+    border-radius: 12px;
+}
+
+#top{
+    opacity: 1;
+    background-image: url("img/ny.webp");
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    padding: 0;
-    margin:0;
-    text-align: center;
-    align-content: center;
+    background-position: top center;
+    background-size:cover;
+    width:100%;
+    height:100vh;
+}
+
+#top_text{
     align-items: center;
-    align-self: center;
+    align-content: center;
+    text-align: center;
+    border:none;
+    height:100vh;
+}
+
+#top_ali{
+    font-family:monospace;
+    font-size:64px;
+    word-break: break-all;
+    font-weight: 900;
+    color:#ffffff;
+    text-shadow: 1px 2px #333333;
 }
 
 #main{
-    background-color: #ffffff;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    align-items: center;
+    gap:15px;
     justify-content: center;
-    word-break: break-word;
-    margin:0 auto;
-    text-align: center;
-    width:90%;
-    padding:0;
+    padding:15px;
 }
-
 #main > div{
+    border: none;
+    width:100%;
     text-align: center;
-    flex: 100%;
+    border:1px solid #ecebeb;
+    color:#666666;
+    word-break: break-word;
 }
 
 #bot{
-    background-color: #ffffff;
-    color:#cccccc;
+    align-items: center;
+    align-content: center;
     text-align: center;
-    padding:32px;
     border:none;
-    margin:0 auto;
-}
-
-ul{
-    text-align: left;
-    list-style-type:decimal;
+    color:#999999;
     padding:0;
     margin:0;
-}
-
-section{
-    border:none;
-    word-break:break-word;
-    margin:0 auto;
-    text-align: center;
-    color:#000000;
-    font-size: 1em;
-    text-align: center;
-    align-content: center;
-    align-items: center;
-    align-self: center;
-    background-color: #ffffff;
-    padding:5px;
-    margin-top:15px;
-    margin-bottom: 15px;
-}
-
-#velkommen{
-    text-align: center;
-    margin:0 auto;
-    padding:15px;
-    width:75%;
-}
-
-h3{
-    font-family: fantasy;
-    color:#999999;
-}
-
-
-#taxi{
-    border:2px solid #000000;
-    width: 100%;
-}
-
-#greencar{
-    width:100%;
-    border:none;
-    margin:0 auto;
-    padding:0;
-    text-align: center;
-    outline:none;
-}
-
-#icons{
-    width:32px;
-    height:32px;
-    padding:10px;
-    border-radius:50%;
-    border:1px solid #cccccc;
-}
-
-#menuCreate{
-    padding:15px;
-    text-align: center;
-    border:none;
-    color:#000000;
+    padding-top:32px;
+    padding-bottom:32px;
     background-color: #eeeeee;
 }
 
-button{
-    padding-left:22px;
-    padding-right:22px;
-    padding-bottom:12px;
-    padding-top:12px;
-    border-radius:15px;
-    outline:none;
-    background-color: #33c617;
-    border:none;
-    margin:0 auto;
-    font-size:1.2em;
-    color:#eeeeee;
-    font-family: fantasy;
-    letter-spacing: 2px;
-    cursor: pointer;
-}
-
-input{
+h3{
+    text-decoration: none;
     padding:15px;
-    outline: none;
-    border:none;
-    width:50%;
-    color:#cccccc;
-    border-bottom:1px solid #000000;
-}
-
-#form{
-    color: #cccccc;
-    margin:0 auto;
-    text-align: center;
-}
-
-#formDiv{
-    padding:15px;
-    text-align: center;
-    margin:0 auto;
-    width:50%;
-}
-
-#btn{
-    padding:22px;
-    background-color: #33c617;
     color:#ffffff;
-    cursor: pointer;
-    font-family: fantasy;
+    border-radius:0px;
+    border:none;
+    background-color: #50c7008a;
+    font-weight: 900;
+    font-size: 1.3em;
+    display: inline-block;
+    outline:none;
+    box-shadow: 5px 5px #333333;
 }
 
-.left{
+p{
+    padding:5px;
+}
+
+span{
+    margin:0;
+    border:none;
+    padding:0;
+    height:0px;
+    width:0px;
+}
+
+.mandag{
+    object-position: center;
+    object-fit: fill;
+    width:100%;
+    overflow: hidden;
+    padding:0;
+    margin: 0;
+    border:0;
+    outline: none;
+}
+
+img{
+    padding:0;
+    margin: 0;
+    border:0;
+    outline: none;
+    overflow: hidden;
+    display: block;
+    margin-bottom: 0;
+}
+
+#left_side{
     text-align: left;
 }
-.center{
-    text-align: center;
-}
-.right{
-    text-align: right;
-}
 
-@media(max-width:800px) {
-    #main > div{
-        flex:100%;
+@media only screen and (max-width: 574px) {
+    #top_ali{
+        font-size:3em;
+    }
+}
+@media only screen and (max-width: 356px) {
+    #top_ali{
+        font-size:2em;
     }
 }
