--- a/styles.css
+++ b/styles.css
@@ -131,8 +131,7 @@ img{
         font-size:2.5em;
     }
     #top{
-        background-size:contain;
-        height:300px;
+        height:50vh;
     }
 }
 @media only screen and (max-width: 356px) {
