--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ a{
     border: none;
     width:100%;
     text-align: center;
-    border:1px solid #ecebeb;
+    border:none;
     color:#666666;
     word-break: break-word;
 }
