--- a/design.css
+++ b/design.css
@@ -1,123 +1,138 @@
 /*
-    644a21eda12751316f7f17b2bbd5df4fc11f1471
-    Fliro.org web design  2025
+    CSS BY FLIRO.ORG 2025 - T.H
 */
-a{
-    color:#cccccc;
-}
-a:hover{
-    opacity: 0.8;
-}
-
 body{
-    user-select: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-family: 1em;
-    letter-spacing: 2px;
-    margin:0;
+    background-color: #ffffff;
+    font-size: 1em;
+    letter-spacing: 1.3px;
+    font-weight: 700;
     padding:0;
+    margin:0;
+    user-select: none;
 }
 
-.body{
+a{
+    text-decoration: none;
+    color:#eeeeee;
+}
+
+img{
+    display: block;
+}
+
+.flex{
     display: flex;
     flex-wrap: wrap;
+}
+
+.menu{
+    position: sticky;
+    top:0;
+    background-color: #1380d2;
+    padding:15px;
+    opacity: 0.9;
+    align-content: center;
+    align-items: center;
+    border-bottom:1px solid #000000;
+}
+
+.child{
+    word-break: break-word;
+    width:50%;
+    height:auto;
+}
+
+.child_bg{
+    background-color: #1380d2;
+    margin:5px;
+    color:#eeeeee;
+    border-top:6px solid #293745;
+}
+
+.input{
+    border:none;
+    outline:none;
+    max-width:75%;
+}
+
+.banner{
+    background-image: url(img/bg.webp) !important;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height:100vh;
+    width:100%;
+}
+
+.radius{
+    border-radius:15px;
+}
+
+.padding{
+    padding:15px;
+}
+
+.margin{
+    margin:15px;
+}
+
+h1,h3,h3{
+    border-bottom:5px solid #1380d2;
+    display: inline-block;
 }
 
 .center{
     text-align: center;
 }
-.right{
-    text-align: right;
-}
+
 .left{
     text-align: left;
 }
 
-.box{
-    flex-grow: 1;
-    min-width: 100%;
+.right{
+    text-align: right;
 }
 
-.main{
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #055abd;
-    justify-content: space-evenly;
-    gap:15px;
+.bottom{
+    background-color: #000000;
+    color:#555555;
     padding:15px;
+    font-size: 12px;
 }
 
-.main-box{
-    color:#eeeeee;
-    flex-grow: 1;
-    font-size: 1.1em;
-    align-content: center;
-    max-width:100%;
-    min-width:40%;
-}
-
-.main-box-inner{
-    width:auto;
-    height:auto;
-    word-break: break-word;
+button{
     background-color: #ffffff;
-    color:#333333;
-    align-content: center;
-    border-radius: 1px;
-    border-top-right-radius: 25%;
-    padding:32px;
-}
-
-.top{
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #055abd;
-    min-height:50px;
-    align-content: center;
-    font-size: 1.2em;
-    font-weight: 900;
-}
-
-.logo{
-    flex:1 75%;
-    text-align: left;
-    color:#eeeeee;
-    padding-left:15px;
-}
-
-.menu{
-    flex:1 10%;
-    text-align: center;
-    color:#eeeeee;
+    color:#222222;
+    font-weight: 700;
+    font-size:1em;
+    min-width:100px;
+    border:none;
+    outline:none;
+    margin:0;
+    padding:0;
     cursor: pointer;
+    border-top:6px solid #1b6ac5;
+    border-left:6px solid #1b6ac5;
+    border-right:6px solid #333333;
+    border-bottom:6px solid #333333;
 }
 
-.banner{
-    width:100%;
-    max-height:550px;
-    object-fit:fill;
+.images{
+    margin:0 auto;
+    width:90%;
+    height:auto;
+    margin:15px auto;
+    border-radius:15px;
 }
 
-.bot{
-    background-color: #ffffff;
-    min-height:175px;
-    align-content: center;
-    color:#666666;
-}
-
-h3,h2,h1{
-    color:#666666;
-    text-align: center;
-}
-
-p{
-    padding:10px;
-}
-
-.icons{
-    width:32px;
-    height:32px;
-    padding:15px;
-    border-radius: 50%;
-    margin:5px;
+/*
+    MEDIA
+*/
+@media (max-width: 800px) {
+    .child{
+        word-break: break-word;
+        width:100%;
+        height:auto;
+    }
 }
