--- a/design.css
+++ b/design.css
@@ -3,7 +3,7 @@
 */
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: #ffffff;
+    background-color: #eeeeee;
     font-size: 1em;
     letter-spacing: 1.3px;
     font-weight: 700;
@@ -14,14 +14,20 @@ body{
 
 a{
     text-decoration: none;
-    color:#eeeeee;
+    color:#cccccc;
+    font-size: 12px;
 }
 
 img{
     display: block;
 }
 
-.flex{
+.flexnowrap{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.flexwrap{
     display: flex;
     flex-wrap: wrap;
 }
@@ -29,25 +35,28 @@ img{
 .menu{
     position: sticky;
     top:0;
-    background-color: #1380d2;
-    padding:15px;
-    opacity: 0.9;
+    background-color: #154119;
+    height:75px;
     align-content: center;
-    align-items: center;
     border-bottom:1px solid #000000;
 }
 
 .child{
     word-break: break-word;
-    width:50%;
+    width: 50%;
     height:auto;
 }
 
+.align_center{
+    align-items: center;
+    align-content: center;
+}
+
 .child_bg{
-    background-color: #1380d2;
+    background-color: #154119;
     margin:5px;
     color:#eeeeee;
-    border-top:6px solid #293745;
+    border-top:6px solid #000000;
 }
 
 .input{
@@ -69,7 +78,7 @@ img{
 }
 
 h1,h3,h3{
-    border-bottom:5px solid #1380d2;
+    border-bottom:5px solid #154119;
     display: inline-block;
 }
 
@@ -93,8 +102,8 @@ h1,h3,h3{
 }
 
 button{
-    background-color: #ffffff;
-    color:#222222;
+    background-color: #eeeeee;
+    color:#333333;
     font-weight: 700;
     font-size:1em;
     min-width:100px;
@@ -103,10 +112,14 @@ button{
     margin:0;
     padding:0;
     cursor: pointer;
-    border-top:6px solid #1b6ac5;
-    border-left:6px solid #1b6ac5;
+    border-top:6px solid #6b6353;
+    border-left:6px solid #6b6353;
     border-right:6px solid #333333;
     border-bottom:6px solid #333333;
+}
+
+.cursor{
+    cursor: pointer;
 }
 
 .images{
@@ -128,13 +141,23 @@ button{
     height:auto;
 }
 
+.a{
+    flex: 1 50%;
+    align-content: center;
+    color:#eeeeee;
+}
+
+.b{
+    flex: 1 50%;
+    align-content: center;
+    color:#eeeeee;
+}
+
 /*
     MEDIA
 */
 @media (max-width: 800px) {
     .child{
-        word-break: break-word;
-        width:100%;
-        height:auto;
+        width: 100%;
     }
 }
