--- a/design.css
+++ b/design.css
@@ -13,9 +13,9 @@ body{
 }
 
 a{
-    text-decoration: none;
     color:#cccccc;
-    font-size: 12px;
+    font-size: 14px;
+    outline:none;
 }
 
 img{
