--- a/design.css
+++ b/design.css
@@ -3,7 +3,7 @@
 */
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: #eeeeee;
+    background-color: #fffffff;
     font-size: 1em;
     letter-spacing: 1.3px;
     font-weight: 700;
@@ -35,7 +35,7 @@ img{
 .menu{
     position: sticky;
     top:0;
-    background-color: #154119;
+    background-color: #52c022;
     height:75px;
     align-content: center;
     border-bottom:1px solid #000000;
@@ -53,7 +53,7 @@ img{
 }
 
 .child_bg{
-    background-color: #154119;
+    background-color: #52c022;
     margin:5px;
     color:#eeeeee;
     border-top:6px solid #000000;
@@ -78,7 +78,7 @@ img{
 }
 
 h1,h3,h3{
-    border-bottom:5px solid #154119;
+    border-bottom:5px solid #52c022;
     display: inline-block;
 }
 
